build_errors.txt
    Checking gui v5.0.0 (Z:\projects\rust\uds-client\crates\gui)
error: the `#[default]` attribute may only be used on unit enum variants
  --> crates\gui\src\launcher.rs:15:5
   |
15 |     Test {
   |     ^^^^
   |
   = help: consider a manual implementation of `Default`

warning: unused import: `crate::launcher::LauncherInner`
  --> crates\gui\src\session.rs:14:5
   |
14 | use crate::launcher::LauncherInner;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant or associated item named `Invisible` found for enum `LauncherInner` in the current scope
   --> crates\gui\src\lib.rs:148:55
    |
148 |                 AppState::Invisible => LauncherInner::Invisible,
    |                                                       ^^^^^^^^^ variant or associated item not found in `LauncherInner`
    |
   ::: crates\gui\src\launcher.rs:12:1
    |
 12 | pub enum LauncherInner {
    | ---------------------- variant or associated item `Invisible` not found for this enum

error[E0609]: no field `initialized` on type `&mut AppHandler`
   --> crates\gui\src\lib.rs:275:17
    |
275 |         if self.initialized && !has_windows {
    |                 ^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `launcher`, `progress`, `rdp`, `popup`, `about` ... and 16 others

warning: unreachable pattern
  --> crates\gui\src\launcher.rs:75:13
   |
55 |             LauncherInner::Test { buttons, hover_idx, .. } => {
   |             ---------------------------------------------- matches all the relevant values
...
75 |             _ => {
   |             ^ no value can reach this
   |
   = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: unreachable pattern
   --> crates\gui\src\launcher.rs:102:13
    |
 85 |             LauncherInner::Test { buttons, request, .. } => {
    |             -------------------------------------------- matches all the relevant values
...
102 |             _ => {
    |             ^ no value can reach this

warning: unreachable pattern
   --> crates\gui\src\launcher.rs:111:13
    |
110 |             LauncherInner::Test { request, .. } => request.take(),
    |             ----------------------------------- matches all the relevant values
111 |             _ => None,
    |             ^ no value can reach this

warning: unused variable: `el`
   --> crates\gui\src\launcher_ui.rs:105:52
    |
105 |     pub(crate) fn handle_launcher_event(&mut self, el: &ActiveEventLoop, event: WindowEvent) {
    |                                                    ^^ help: if this is intentional, prefix it with an underscore: `_el`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0599, E0609.
For more information about an error, try `rustc --explain E0599`.
warning: `gui` (lib) generated 5 warnings
error: could not compile `gui` (lib) due to 3 previous errors; 5 warnings emitted
